# streamingSQL

./: .env  README.md  docker-compose.yml  package.json
demo/: Dockerfile  Dockerfile.prod  package-lock.json  package.json
demo/prisma/: schema.prisma
demo/prisma/migrations/20240820080859_innit/: migration.sql
demo/src/: app.module.ts
demo/src/data-producer/: data-producer.controller.ts  data-producer.module.ts  data-producer.service.ts  data.ts
demo/src/data-producer/dto/: create-data-producer.dto.ts
demo/src/data-producer/entities/: data-producer.entity.ts
postgres/: Dockerfile
streamingSQL/: .env  Cargo.toml  build.rs
streamingSQL/src/: main.rs  pg_logicaldec.proto
streamingSQL/src/core/: coordinator.rs  dataflow_types.rs  mod.rs  parser.rs  planer.rs  sink.rs  subscription.rs  worker.rs
streamingSQL/src/core/types/: buffer.rs  dataflow_types.rs  inputs.rs  mod.rs  source.rs
streamingSQL/src/pg_client/: data.rs  mod.rs  pg_client.rs  publication.rs  replication.rs  schema.rs  stream.rs  subscriber.rs
