[package]
name = "streaming-sql-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
timely = "0.12.0"
differential-dataflow = "0.12.0"
postgres = "0.19.7"
sqlparser = "0.46.0"
