[package]
name = "streaming-sql-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
timely = "0.12.0"
differential-dataflow = "0.12.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
sqlparser = "0.49.0"
bytes = "1.0"
dotenv = "0.15.0"
prost = "0.13.1"
uuid = { version = "1.2.1", features = ["v4"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.13.1"
